# fini

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  README.md  com.fini.app.desktop  com.fini.app.yml  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.jest.json  vite.config.ts
.cargo/: config.toml
.claude/: settings.json
.obsidian/: app.json
spec/: CLI.md  (+11 more)
src-tauri/: Cargo.toml  README.md  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/devtools-capabilities/: default.json
src-tauri/e2e-capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: fini-cli-zipsign.pub
src-tauri/migrations/: 001_init.sql
src-tauri/migrations/00000000000001_init/: down.sql  up.sql
src-tauri/migrations/00000000000002_quest_model_v2/: down.sql  up.sql
src-tauri/migrations/00000000000003_quest_space_not_null/: down.sql  up.sql
src-tauri/migrations/00000000000004_identity_text_ids/: down.sql  up.sql
src-tauri/migrations/00000000000005_repair_builtin_spaces/: down.sql  up.sql
src-tauri/migrations/00000000000006_main_focus_events/: down.sql  up.sql
src-tauri/migrations/00000000000007_quest_order_rank/: down.sql  up.sql
src-tauri/migrations/00000000000008_quest_series/: down.sql  up.sql
src-tauri/migrations/00000000000009_reminders/: up.sql
src-tauri/migrations/00000000000010_sync_and_focus/: down.sql  up.sql
src-tauri/migrations/00000000000011_pair_mapping_last_synced/: down.sql  up.sql
src-tauri/migrations/00000000000012_focus_history_as_source_of_truth/: down.sql  up.sql
src-tauri/migrations/00000000000013_reminder_scheduling/: down.sql  up.sql
src-tauri/migrations/00000000000014_settings/: up.sql
src-tauri/migrations/00000000000015_pair_mapping_end_of_sync/: down.sql  up.sql
src-tauri/migrations/00000000000016_notification_snoozes/: down.sql  up.sql
src-tauri/migrations/00000000000017_focus_enter_count/: down.sql  metadata.toml  up.sql
src-tauri/migrations/00000000000017_focus_entry_count/: up.sql
src-tauri/migrations/00000000000018_quest_checklist_md/: down.sql  up.sql
src-tauri/migrations/00000000000019_paired_device_bluetooth_transport/: down.sql  up.sql
src-tauri/patches/sherpa-onnx-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
src-tauri/src/: async_runtime.rs  cli.rs  desktop.rs  lib.rs  main.rs  mcp.rs  model_download.rs  resume_watcher.rs  schema.rs  voice.rs  webkit_runtime.rs
src-tauri/src/models/: checklist_activity.rs  focus_history.rs  mod.rs  notification_snooze.rs  pair_space_mapping.rs  paired_device.rs  quest.rs  quest_series.rs  reminder.rs  settings.rs  space.rs  sync.rs
src-tauri/src/repositories/: mod.rs  quest.rs  reminder.rs
src-tauri/src/services/: appimage_desktop.rs  backup.rs  checklist.rs  checklist_md.rs  cli.rs  cli_update.rs  db.rs  desktop_update.rs  due_time.rs  mcp.rs  migration_import.rs  mod.rs  notification.rs  quest.rs  reconciler.rs  reminder.rs  settings.rs  space.rs  update_recovery.rs
src-tauri/src/services/device_connection/: commands.rs  mod.rs  runtime.rs  transport.rs  types.rs
src-tauri/src/services/device_sync/: commands.rs  mod.rs  runtime.rs  types.rs
src-tauri/src/services/space_sync/: commands.rs  merge.rs  mod.rs  outbox.rs  replay.rs  session.rs  types.rs  ws_client.rs  ws_server.rs  ws_session.rs
src-tauri/src/services/transport/: codec.rs  envelope.rs  mod.rs  secure_channel.rs  selection.rs  sim.rs  tcp_ws.rs  tests.rs
src-tauri/src/utils/: text.rs
(+237 files in other folders)
