[package]
name = "fini"
version = "0.1.5"
description = "Fini"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[patch.crates-io]
sherpa-onnx-sys = { path = "patches/sherpa-onnx-sys" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-onnx = "0.1.9"
sherpa-onnx-sys = "0.1.9"
cpal = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros"] }
dirs = "5"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
