[package]
name = "fini"
version = "0.1.23"
description = "Fini"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[patch.crates-io]
sherpa-onnx-sys = { path = "patches/sherpa-onnx-sys" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-onnx = "0.1.9"
sherpa-onnx-sys = "0.1.9"
cpal = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros"] }
dirs = "5"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-mcp-bridge = "0.10"
clap = { version = "4", features = ["derive"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
time = { version = "0.3.47", features = ["parsing", "formatting"] }
tauri-plugin-playwright = { version = "0.2" }
socket2 = "0.6"
mdns-sd = "0.13"
zbus = { version = "5.14.0", features = ["blocking-api"] }
zvariant = "5.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[features]
# Enable the Playwright control-server plugin for UI e2e tests. Off by default;
# the production build must not ship this — it exposes an in-process socket
# bridge that accepts webview.eval() from a test runner.
e2e-testing = []
